--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>meow</title>
 </head>
-<body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;">
+<body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;font-color:White">
 
 <h1>TEST</h1>
 <p>I LOVE MEN!!!!!!!!!!!!!!!!!</p>
