--- a/index.html
+++ b/index.html
@@ -3,24 +3,14 @@
 <title>meow</title>
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
-<p>
-                                                                                                                                                      <br>
-                                                                                                                                                      <br>
-                                                                         ....                                                                         <br>
-                                                                      .............                .                                                  <br>
-                                                                   .....',;;,''........           ...                                                 <br>
-                                                                  ....';cxkOxolc:,,'....       ..':l,.                                                <br>
-       .''..                                       ......       ....';lxkxdddx0KOdl:,...     ..,:xXXk:..      ..'.          ....          .''..       <br>
-     .lkOOkd,       ;;                           ...   ..'.     ...';okl.    .'dXKd;'...    .....cONNx,.      ...,:'      .;ldxxl,      .lxOOkd;.     <br>
-    .oOO00OOx'     .xk:.          .;.           ..       .'.   ....,ckd.       .kKo,....   ..    .,lol.           .;.       ..:dkd'    .lOOO0OOx,     <br>
-    .ckOOOOkl.     .lOOxl::'      .cc.          ':'.     ..    ....,l0O'       'kk:,....   .'.    ..''             ..          ,dl.     :kOOOOOd.     <br>
-     .,cloc;.       .;lddo:.       .;:;,..     .'d0k;.  ..      ...,:d0Ol,...,cxxc,'....    .'.......                          .'.       'cllc;.      <br>
-                                                .'cl:'..        ...',:ok00Okkxdc;,'....       .....                                                   <br>
-                                                                 ....';clc:;;,''.....                                                                 <br>
-                                                                  ....'''..........                                                                   <br>
-                                                                   .............                                                                      <br>
-                                                                                                                                                      <br>
-</p>
+<pre>
+       _..._     
+     .::'   `.    
+    :::       : 
+    :::       :  
+    `::.     .'  
+      `':..-'   
+</pre>
 
 <p>You're not suppose to be here yet.</p>
 
