--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>meow</title>
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
-<pre>
+<pre id="moonImage">
        _..._     
      .::'   `.    
     :::       : 
