--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>...?</title>
 </head>
-<body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
+<body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white", onload="RandomizeMoons()">
 <pre id="moonImage">
        _..._     
      .::'   `.    
