--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <title>...?</title>
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white", onload="RandomizeMoons()">
+<script>
+function RandomizeMoons(){
+  console.log("test!!!!")
+}
+</script>
 <pre id="moonImage">
        _..._     
      .::'   `.    
