--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <head>
 <title>...?</title>
 </head>
-<body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white", onload="RandomizeMoons()">
-<script>
-function RandomizeMoons(){
-  console.log("test!!!!")
-}
-</script>
+<body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
 <pre id="moonImage">
        _..._     
      .::'   `.    
