--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>...?</title>
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
+<script src="asciiRng.js"></script> 
 <pre id="moonImage">
        _..._     
      .::'   `.    
