--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </pre>
 
 <p>You're not suppose to be here yet.</p>
+<!--looking for secrets are we? best to find things on your own. -->
 
 </body>
 </html> 
