--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       `':..-'   
 </pre>
 
-<p>You're not suppose to be <a href="/alt" style="text-decoration:none">here</a> yet.</p>
+<p>You're not suppose to be <a href="/alt" class="hide-link">here</a> yet.</p>
 <!--looking for secrets are we? best to find things on your own. -->
 
 </body>
