--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>...?</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
 <pre>
