--- a/alt.html
+++ b/alt.html
@@ -3,16 +3,17 @@
 <title>...?</title>
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
+<audio id="gn" src="audio/music/greenNoise.mp3" loop="loop"></audio>
+<script>
+window.onload = function() {
+       document.getElementById("gn").play();
+       document.getElementById("gn").setVolume(0.5);
+}
+</script>
 <pre>
-       _..._     
-     .::::  `.    
-    ::::::    :
-    ::::::    :  
-    `:::::   .'  
-      `'::.-'
+
 </pre>
 
-<p>Not now.</p>
 
 
 </body>
