--- a/alt.html
+++ b/alt.html
@@ -3,14 +3,14 @@
 <title>...?</title>
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
-<audio id="gn" src="audio/music/greenNoise.mp3" loop="loop"></audio>
+<audio id="gn" src="audio/greenNoise.mp3" loop="loop"></audio>
 <script>
-window.onload = function() {
+window.onload = function test() {
        document.getElementById("gn").play();
        document.getElementById("gn").setVolume(0.5);
 }
 </script>
-<pre>
+<pre style="font-size:12px">
 ------------------------------------------------------------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------------------------------------------------------------
