--- a/alt.html
+++ b/alt.html
@@ -3,118 +3,22 @@
 <title>...?</title>
 </head>
 <body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
+
+<pre>
+       _..._     
+     .'     `.    
+    :         :
+    :         :  
+    `.       .'  
+      `-...-' 
+</pre>
+<p>Do you think they're still out there?</p>
+
 <audio id="gn" src="audio/greenNoise.mp3" loop="loop"></audio>
-<script>
-window.onload = function test() {
+<script type="text/javascript">
+window.onload = function() {
        document.getElementById("gn").play();
-       document.getElementById("gn").setVolume(0.5);
 }
 </script>
-<pre style="font-size:6px">
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------+---------------------------------------------------------------------*-
----------------------------------------------------------------------------------------------------------------------------------------------------***
-------------------------------------------------------------------------------++-----------------------------------------------------------------*----
--------------------------------------------------------------------------------+------------------------------------------------------------------*-**
---------------------------------------------------------------------------------------------------------------------------------------------------**-*
-------------------------------------------------------------------------------------------------------------------------------------------**---*******
---------------------------------------------------------------------------------------------------------------------------------------------*------***
--------------------------------------------------------------------------------+------------------------------------------------------------------***-
------------------------------------------------------------------------------+--:----------------------------------------------------*-*--------****--
-------------------------------------------------------------------------------+--------------------------------------------------*---*--***---**-***--
-------------------------------------------------------------------------------+---------------------------------------------**-*-----*--*-***-**--**--
-------------------------------------------------------------------------------*---------------------------------------------***-*--*------****--*--*-*
------------------------------------------------------------------------------++------------------------------------------*-*-*-*--*---------*-------*-
-------------------------------------------------------------------------------+---------------------------------------------*--------*----*-----------
-----------------------------------------------------------------------------**-***------------------------------------------****--*----*---*--------*-
----------------------------------------------------------------------------*+:+:+:%--------------------------------------*------*---*--*-*-*-**-------
--------------------------------------------------------------------------++----*--%----------------------------*--*----*--**--*-**----***-*--*--------
--------------------------------------------------------------------------++#**-****-------------------------**----*-*--------**---*--*******---*-*--*-
----*------------------------------------------------------------------------:.-+*:-----------------------------**-***-*-*-----**--*-*--*****----*-*--*
----*-------------------*-----------------------------------------------------**----------*------------*********************-******************---****-
------------------****-*--**-*------------------------------------------------------*--------*-*****-**************************************************
----------------------*------*--**------------------------------------------*---*+---******--**********************************************-**--*******
----------------------------------------------------------------------***------+-:--***-*-*******-**********-******************************************
----------------------*--------*-------*---------------------------------*-*----------*****-***********************************************************
------------------------------------*-----------------------------------*---*--++*--**---*--*-*-----*-----*********************************************
-----------------------*-----------------------------------------------*-----*-+--**-*****-****--*---***********************************************-**
---------------------------------------------------------------------------*-+-+-----*-***-***--*******************************************************
---------------------------------------------------------*-------------------:--+--------*-*--**----*-----*--******************************************
------------------*----------------------------------------------------*-----+::.::-----------***---*-------***--**--********-*************************
--------------------------------------------------------*-----*------*----**--+++-+---*--**---**-****--*--*--****--**-***********--***-****************
-----------------------------------------------------------------**-*--*-**---*++----**********-*--**-*---**---*-**-*****-*-****-****-*-***************
--------------------*---------------------------------------*--*-**---*---**--*+:*-*--*-*****--*****--**-*--**---**-***-*-*-*-****------*********-***-*
----------------------------*-----------------------**-*--*---------*------*:*-:.*-**--*-*-*---*-*--*--*-**-**-***-*-**---**-**-*--**---*-*************
--------------*-------------------------*------*----*-*---*-----*-*-*---**--**-++**-***-*-*-----------*--*-**-**---***--************************-******
-------------------------------*---*-*--------******--**---*-*-----------*--**-++*--*-----------------*-----------*---*---*****-*****-********-******--
-------*-*-------*-***-*--*---*------*-----------------------------------------++-------------*---*---*---------*---------******--*---********--****-**
----*------*--*--**-*-*****-------------------------------------------------*--+-*------*-------------*--------*-*---*---*****--*****************--**-*
-----------*--*-**--***-------*--------------------------*-----**-----------*-+::*:::---*--**-*-*-----**-----*--*--**-*-*--*-******-**--***************
-------------------------------------------------------------*------*---------*::----*---*--*--**--*--*--*-----*-*--*********-***********-*************
--------------------------------------------------------------------*---**-**--::-*--*---**-*---*-*----******--*****-*-************************-**-****
---------------------------------------------------------------*---**-*-*---**-::---+--**-**--**--*-**********-**-*************************************
----------------*---------*-------------*-----------*------*--*-*-**-------*:-*--+--*---********-*****-*-**********************************************
--------------------**-----------*--------*---*----*---------**---****-**-----------*---******-**********--********************************************
------*---*--**--------*---------**--*--**---*---******--**-***-*********-*--***-+-+----***************************************************************
-------**-*---*******-***-***-*--*-*-**-*-***-*-**-**--*-*-**************-+**--..++::---*********-*****************************************************
--*--*-*-**---*****-*-**-*-***-*-*--*****-**--**-*--******-*-*-***********-++:+::***----***************************************************************
-*-********-*****-***-************-*******----****---********************#:*-**::*-*::-****************************************************************
-*---**********-**********-*-**-*******************************************-***::**-*:*:***************************************************************
-******-**************************************-***************************--*:*.:******-*******-*******************************************************
-***********************************************************************+-*--**----*:+--+**************************************************************
-***********************************************************************+.-+--*--*+:+++++**************************************************************
-***********************************************************************+-*+++-++:::::++**-************************************************************
-***********************************************************************:-+:-::..::::..****************************************************************
-************************************************************************-****-::*******--*************************************************************
-************************************************************************----**:::--**-*-**************************************************************
-*************************************************************************-****::**********************************************************************
-***********************************************************************:******::****--*-**************************************************************
-***********************************************************************-******::*****#****************************************************************
-************************************************************************#*---*::****----**************************************************************
-***************************************************************************+**+:**---*-***************************************************************
-******************************************************************************:+******-***************************************************************
-***********************************************************************-**---+::-*----****************************************************************
-**********************************************************************-*******-:**********************************************************************
-**-***************************************************************************:+*******-**************************************************************
-****-******************************************************************%****+-::*--*******************************************************************
-*************************************************************************-****:+**********************************************************************
-*******-****************************************************************+*****:+**********************************************************************
-*********************:-::::+-****-*-:********************************+*:******:+******-***************************************************************
-**:+-************--*+::.:.:...::.:.:.:::--***************************:*+-++-**:+*****-*+---***********************************************************
--*:::::-:+:++***-::-.:....:...::.:......:.***************************--*:-****::****+++***+***********************************************************
-.::::. : ::::-*-+....:..:....:.............-********---**************:++::++++:+**+*.-**-*************************************************************
-:.::..:...:-::::.:.:..::...:..:.........*.:.:*******-++*********-----+-+-*-**-:+*+-++++-**************************************************************
-:..:....:...:.:..:.:....::...........::.::-::*******::********---+---*:+--**+*:+*+*****+*--***********************************************************
-:..:............  ... -.:.. ..: ....:.+*:::--*******::********-+::::: ::..:.. .::+:+++-:+.+-***************-***::*************************************
-....:.::.:.......:.. ....:...............:...:::***-::+++++::::::::.:::.:::++:::+--+++++-++-------------------****-***-*****--------------------**--**
-::::::::::::::::::::::::........:.........:..:.:::::::::::+::::.:.....::::.:::.:-:-+:++++---------+:--------------------------------------------------
-:::::::::::::::::::::::::::::::::::::::::::::+::::+:::::::::::.:..:: ::...... ...:::::+:::-+::-++-+.++-++---++--++++--+::::-+--::+--:::+::++++:+-+--+-
-::::::::::::::::::::::::::::::::::::+::::::::::::::::::::::::::::::::::::::::::+:+:+++:++::::::..::.:.::...::.:+::+--::+----------+++::+--++--*-------
-::::::::::::::::::::::::::::::::::::::::::::::+::::::::::::::::::::::::::::::::::::::::::::::::+:::+:+++::++::::+:::++++++++::+:::::::-+:+------------
- :::::.::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::.:::::::::::::::++++++:+++:++++
-:::::::.::::::::::::::::::::::::::::::::::::::::::+::::.::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-:::::::::::::+::::::::::::::.::::::::::::::::::::::::::::::::::::::.::::.:::::::::.:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-:::::.::::::::::::::::::::+:::::::::::::::::::::::::+:::::::::::::::::::::::+:::+:::::::::::::::::::+:++::::::::::::::::::::::::::::::+:::::::::::::::
-::::.::::::::.::::::::::::::::::::::::::::::::+:::+:::::::::::::::++:+::::::+:::++:+::::::::::+++:::::+::+:::::++::::++::+::::+:+:+:++:++::+:::+:::+::
-:::.:.:::::.::::::::::::::::::::::::::::+:+::::::+::-:::-:::::::::+:::::::+:::::::::::+:+:++::::::::::::::::+:+::::.::::::::::::+:+:::::++:::::++:::::
-:::::::::::::::.:::::::::::::::+:::::::::::::::::::::::::::::::::::::::+::::::::::::::::+::::++:+::::::-+:::::+:+:::::+:::+:+::::::+:::+:+:::++:::+:+:
-::::::::::::::::::::::::::::::::::::::::::::.::::::::::::::::.:::::::::::::+:::::::++:::::::+:::::::::::::::+:::::::::+:+:::::+:+:::++++:::::++:+:::+:
-:::::::::::::::::::::.:::::::::::::::::::::::::::::::.::::::::::::::::::::::::::::::::::::::::+::::::+:+:::::::++:::::+:::::::::::::::::::::::::::::::
-
-</pre>
-
-
-
 </body>
 </html> 
