--- a/alt.html
+++ b/alt.html
@@ -12,11 +12,11 @@
     `.       .'  
       `-...-' 
 </pre>
-<p>Do you think they're still out there?</p>
+<a onclick="playAudio()">Listen in.</a>
 
 <audio id="gn" src="audio/greenNoise.mp3" loop="loop"></audio>
 <script type="text/javascript">
-window.onload = function() {
+function playAudio() {
        document.getElementById("gn").play();
 }
 </script>
