--- a/alt.html
+++ b/alt.html
@@ -13,12 +13,21 @@
       `-...-' 
 </pre>
 <a>Listen in.</a>
+<pre>
+       ┌──────┐
+</pre>
 <pre id="bttn" onclick="playAudio()">
-       [⏵]
+       │ [⏵] │
+</pre>
+<pre>
+       │      │
 </pre>
 
 <pre id="bttn" onclick="pauseAudio()">
-       [⏸]
+       │ [⏸] │
+</pre>
+<pre>
+       └──────┘
 </pre>
 
 <audio id="gn" src="audio/greenNoise.mp3"></audio>
