--- a/alt.html
+++ b/alt.html
@@ -13,20 +13,20 @@
       `-...-' 
 </pre>
 <a>Listen in.</a>
-<pre>
+<pre style="line-height:0.8">
        ┌──────┐
 </pre>
-<pre id="bttn" onclick="playAudio()">
+<pre id="bttn" onclick="playAudio()" style="line-height:0.8">
        │ [⏵] │
 </pre>
-<pre>
+<pre style="line-height:0.8">
        │      │
 </pre>
 
-<pre id="bttn" onclick="pauseAudio()">
+<pre id="bttn" onclick="pauseAudio()" style="line-height:0.8">
        │ [⏸] │
 </pre>
-<pre>
+<pre style="line-height:0.8">
        └──────┘
 </pre>
 
