--- a/alt.html
+++ b/alt.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="window-body">
-    <pre>
+    <pre color:black;>
        _..._     
      .'     `.    
     :         :
