--- a/alt.html
+++ b/alt.html
@@ -3,11 +3,11 @@
 <title>...?</title>
 <link rel="stylesheet" href="https://unpkg.com/98.css" />
 </head>
-<body style="background-color:Black;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
+<body style="background-color:#c0c0c0;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
 
 <div class="window" style="width: 300px">
   <div class="title-bar">
-    <div class="title-bar-text">A Window With Stuff In It</div>
+    <div class="title-bar-text">...?</div>
     <div class="title-bar-controls">
       <button aria-label="Minimize"></button>
       <button aria-label="Maximize"></button>
