--- a/alt.html
+++ b/alt.html
@@ -3,7 +3,7 @@
 <title>...?</title>
 <link rel="stylesheet" href="https://unpkg.com/98.css" />
 </head>
-<body style="background-color:#c0c0c0;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
+<body style="background-image:#009a9a;font-family: 'Lucida Console', 'Courier New', monospace;color:white">
 
 <div class="window" style="width: 300px">
   <div class="title-bar">
