--- a/testing.html
+++ b/testing.html
@@ -10,7 +10,7 @@
 <style>
 </style>
 <body>
-    <div class="tui-screen-800-600 bordered tui-bg-blue-black">
+    <div class="tui-screen-800-600 centered bordered tui-bg-blue-black">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute">
