--- a/testing.html
+++ b/testing.html
@@ -71,34 +71,15 @@
             <ul>
                 <li class="tui-sidenav-button red-168-text">≡</li>
                 <li class="tui-dropdown">
-                    <span class="red-168-text">F</span>ile
+                    <li class="tui-dropdown">
+                        <span class="red-168-text">H</span>ome
+                    </li>
+                    <span class="red-168-text">P</span>rojects
                     <div class="tui-dropdown-content">
                         <ul>
                             <li>
                                 <a href="#!">
-                                    <span class="red-168-text">N</span>ew
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    <span class="red-168-text">O</span>pen...
-                                    <span class="tui-shortcut">F3</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    <span class="red-168-text">S</span>ave
-                                    <span class="tui-shortcut">F2</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    S<span class="red-168-text">a</span>ve as...
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    Save a<span class="red-168-text">l</span>l
+                                    <span class="red-168-text">E</span>xample
                                 </a>
                             </li>
                             <div class="tui-black-divider"></div>
@@ -107,22 +88,22 @@
 
                             <li class="tui-dropdown block">
                                 <span class="right">►</span>
-                                <span class="red-168-text">M</span>ore
+                                <span class="red-168-text">S</span>tarmap
                                 <div class="tui-dropdown-content">
                                     <ul>
                                         <li>
                                             <a href="#!">
-                                                <span class="red-168-text">C</span>hange dir...
+                                                <span class="red-168-text">M</span>ap
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#!">
-                                                <span class="red-168-text">P</span>rint
+                                                <span class="red-168-text">W</span>iki
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#!">
-                                                <span class="red-168-text">D</span>OS shell
+                                                <span class="red-168-text">M</span>isc
                                             </a>
                                         </li>
                                     </ul>
@@ -130,17 +111,8 @@
                             </li>
 
                             <div class="tui-black-divider"></div>
-                            <li>
-                                <a href="#!">
-                                    <span class="red-168-text">Q</span>uit
-                                    <span class="tui-shortcut">F10</span>
-                                </a>
-                            </li>
                         </ul>
                     </div>
-                </li>
-                <li class="tui-dropdown">
-                    <span class="red-168-text">E</span>dit
                 </li>
                 <li class="tui-dropdown">
                     <span class="red-168-text">V</span>iew
@@ -154,7 +126,7 @@
         <!-- Edit panel -->
         <div class="tui-window full-width tui-no-shadow" style="margin-top: 20px;">
             <fieldset class="tui-fieldset">
-                <legend class="center">MYAPP.CPP</legend>
+                <legend class="center">INDEX.HTML</legend>
                 <span class="tui-fieldset-button"><span class="green-255-text">↕</span></span>
                 <span class="tui-fieldset-button left"><span class="green-255-text">■</span></span>
                 <span class="tui-fieldset-text top right" style="margin-right: 50px">1</span>
@@ -162,19 +134,6 @@
                 <textarea class="tui-textarea full-width" style="height: 493px; overflow: scroll;">Testing Area</textarea>
             </fieldset>
         </div>
-
-        <!-- Status bar -->
-        <div class="tui-statusbar absolute">
-            <ul>
-                <li><a href="#!"><span class="red-168-text">F1</span> Help</a></li>
-                <li><a href="#!"><span class="red-168-text">F2</span> Save</a></li>
-                <li><a href="#!"><span class="red-168-text">F3</span> Open</a></li>
-                <li><a href="#!"><span class="red-168-text">Alt+F9</span> Compile</a></li>
-                <span class="tui-statusbar-divider"></span>
-                <li><a href="#!"><span class="red-168-text">F10</span> Menu</a></li>
-            </ul>
-        </div>
-
     </div>
 </body>
 </html>
