--- a/testing.html
+++ b/testing.html
@@ -70,16 +70,20 @@
             <span class="tui-datetime" data-format="h:m:s a"></span>
             <ul>
                 <li class="tui-sidenav-button red-168-text">≡</li>
-                <nav class="tui-nav">
-                    <ul>
-                        <li class="tui-dropdown">
-                            <span>Menu</span>
-                    	    <div class="tui-dropdown-content">
-                                ...
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
+
+                <li class="tui-dropdown">
+                    <li class="tui-dropdown">
+                        <span class="red-168-text">H</span>ome
+                    </li>
+                    <span class="red-168-text">P</span>rojects
+                    <div class="tui-dropdown-content">
+                        <ul>
+                            <div class="tui-black-divider"></div>
+                            <li>
+                                <a href="#!">
+                                    <span class="red-168-text">E</span>xample
+                                </a>
+                            </li>
 
                             <!-- SUBMENU EXAMPLE -->
 
