--- a/testing.html
+++ b/testing.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Turbo Vision Example</title>
+    <title>Main Hub</title>
     <script src="../dist/tuicss.min.js"></script>
     <link rel="stylesheet" href="../dist/tuicss.min.css">
 </head>
 
 <body>
-    <div class="tui-screen-800-600 bordered tui-bg-blue-black">
+    <div class="tui-screen-800-600 bordered centered tui-bg-blue-black">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute">
