--- a/testing.html
+++ b/testing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-tui-scroll">
+<html lang="en" class="no-tui-scroll tui-bg-blue-black">
 
 <head>
     <meta charset="UTF-8">
@@ -69,8 +69,14 @@
             <span class="tui-datetime" data-format="h:m:s a"></span>
             <ul>
                 <li class="tui-sidenav-button red-168-text">≡</li>
+
                 <li class="tui-dropdown">
-                    <span class="red-168-text">P</span>roject
+                    <a href="#!"></a>
+                    <span class="red-168-text">H</span>ome
+                </li>
+
+                <li class="tui-dropdown">
+                    <span class="red-168-text">P</span>rojects
                     <div class="tui-dropdown-content">
                         <ul>
                             <li>
@@ -139,13 +145,12 @@
                     </div>
                 </li>
                 <li class="tui-dropdown">
-                    <span class="red-168-text">E</span>dit
+                    <a href="#!"></a>
+                    <span class="red-168-text">A</span>bout
                 </li>
                 <li class="tui-dropdown">
-                    <span class="red-168-text">V</span>iew
-                </li>
-                <li class="tui-dropdown">
-                    <span class="red-168-text">H</span>elp
+                    <a href="#!"></a>
+                    <span class="red-168-text">C</span>redits
                 </li>
             </ul>
         </nav>
