--- a/testing.html
+++ b/testing.html
@@ -69,6 +69,7 @@
             <span class="tui-datetime" data-format="h:m:s a"></span>
             <ul>
                 <li class="tui-sidenav-button red-168-text">≡</li>
+                <span class="tui-statusbar-divider"></span>
 
                 <li class="tui-dropdown">
                     <a href="#!"></a>
@@ -81,29 +82,7 @@
                         <ul>
                             <li>
                                 <a href="#!">
-                                    <span class="red-168-text">N</span>ew
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    <span class="red-168-text">O</span>pen...
-                                    <span class="tui-shortcut">F3</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    <span class="red-168-text">S</span>ave
-                                    <span class="tui-shortcut">F2</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    S<span class="red-168-text">a</span>ve as...
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#!">
-                                    Save a<span class="red-168-text">l</span>l
+                                    <span class="red-168-text">E</span>xample
                                 </a>
                             </li>
                             <div class="tui-black-divider"></div>
@@ -146,11 +125,13 @@
                 </li>
                 <li class="tui-dropdown">
                     <a href="#!"></a>
-                    <span class="red-168-text">A</span>bout
+                        <span class="red-168-text">A</span>bout
+                    </a>
                 </li>
                 <li class="tui-dropdown">
-                    <a href="#!"></a>
-                    <span class="red-168-text">C</span>redits
+                    <a href="#!">
+                        <span class="red-168-text">C</span>redits
+                    </a>
                 </li>
             </ul>
         </nav>
