--- a/testing.html
+++ b/testing.html
@@ -95,7 +95,7 @@
                                 <div class="tui-dropdown-content">
                                     <ul>
                                         <li>
-                                            <a href="#!">
+                                            <a href="/STARMAP/MAP">
                                                 <span class="red-168-text">M</span>ap
                                             </a>
                                         </li>
