--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -1,1 +1,99 @@
-test!!!
+<!DOCTYPE html>
+<html lang="en" class="tui-bg-purple-black">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Table Example</title>
+    <script src="../dist/tuicss.min.js"></script>
+    <link rel="stylesheet" href="../dist/tuicss.min.css">
+    <style>
+        .tui-window {
+            margin-bottom: 40px;
+        }
+    </style>
+</head>
+
+<body>
+
+    <body class="center" style="padding: 50px">
+        <div class="tui-window" style="text-align: left;">
+            <fieldset class="tui-fieldset">
+                <legend class="center">PLANET INDEX</legend>
+                <table class="tui-table hovered-cyan" style="width: 700px">
+                    <thead>
+                        <tr>
+                            <th>NAME</th>
+                            <th>INDEX</th>
+                            <th>TYPE</th>
+                            <th>CATEGORY</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Sun</td>
+                            <td>#2</td>
+                            <td>STAR</td>
+                            <td>S-4</td>
+                        </tr>
+                        <tr>
+                            <td>msdos.exe</td>
+                            <td>748</td>
+                            <td>Planet</td>
+                            <td>P-1</td>
+                        </tr>
+                        <tr>
+                            <td>System</td>
+                            <td>25000</td>
+                            <td>Moon</td>
+                            <td>M-0</td>
+                        </tr>
+                        <tr>
+                            <td>svchost.exe</td>
+                            <td>580</td>
+                            <td>01</td>
+                            <td>9.440 Kb</td>
+                        </tr>
+                        <tr>
+                            <td>explorer.exe</td>
+                            <td>4</td>
+                            <td>00</td>
+                            <td>53.740 Kb</td>
+                        </tr>
+                        <tr>
+                            <td>conhost.exe</td>
+                            <td>25768</td>
+                            <td>00</td>
+                            <td>1.748 Kb</td>
+                        </tr>
+                        <tr>
+                            <td>msdos.exe</td>
+                            <td>748</td>
+                            <td>00</td>
+                            <td>22.216 Kb</td>
+                        </tr>
+                        <tr>
+                            <td>System</td>
+                            <td>25000</td>
+                            <td>12</td>
+                            <td>112 Kb</td>
+                        </tr>
+                        <tr>
+                            <td>svchost.exe</td>
+                            <td>580</td>
+                            <td>01</td>
+                            <td>9.440 Kb</td>
+                        </tr>
+                        <tr>
+                            <td>explorer.exe</td>
+                            <td>4</td>
+                            <td>00</td>
+                            <td>53.740 Kb</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </fieldset>
+        </div><br>
+    </div>
+</body>
+
+</html>
