--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -30,7 +30,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Sun</td>
+                            <a href="#!">
+                                <td>Sun</td>
+                            </a>
                             <td>#2</td>
                             <td>STAR</td>
                             <td>S-4</td>
