--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Table Example</title>
+    <title>STARMAP</title>
     <script src="../dist/tuicss.min.js"></script>
     <link rel="stylesheet" href="../dist/tuicss.min.css">
     <style>
@@ -35,19 +35,23 @@
                             </a>
                             <td>#2</td>
                             <td>STAR</td>
-                            <td>S-4</td>
+                            <td>S-04</td>
                         </tr>
                         <tr>
-                            <td>msdos.exe</td>
-                            <td>748</td>
+                            <a href="#!">
+                                <td>Earth</td>
+                            </a>
+                            <td>#61</td>
                             <td>Planet</td>
-                            <td>P-1</td>
+                            <td>PC-01</td>
                         </tr>
                         <tr>
-                            <td>System</td>
-                            <td>25000</td>
-                            <td>Moon</td>
-                            <td>M-0</td>
+                            <a href="#!">
+                                <td>Pluto</td>
+                            </a>
+                            <td>#61</td>
+                            <td>Dwarf</td>
+                            <td>D-05</td>
                         </tr>
                         <tr>
                             <td>svchost.exe</td>
