--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -31,7 +31,9 @@
                     <tbody>
                         <tr>
                             <a href="#!">
-                                <td>Sun</td>
+                                <div>
+                                    <td>Sun</td>
+                                </div>
                             </a>
                             <td>#2</td>
                             <td>STAR</td>
@@ -39,7 +41,9 @@
                         </tr>
                         <tr>
                             <a href="#!">
-                                <td>Earth</td>
+                                <div>
+                                    <td>Earth</td>
+                                </div>
                             </a>
                             <td>#61</td>
                             <td>Planet</td>
@@ -47,7 +51,9 @@
                         </tr>
                         <tr>
                             <a href="#!">
-                                <td>Pluto</td>
+                                <div>
+                                    <td>Pluto</td>
+                                </div>
                             </a>
                             <td>#61</td>
                             <td>Dwarf</td>
